--- a/style.css
+++ b/style.css
@@ -53,3 +53,39 @@ h1{
     font-size: 18px;
     color: #e5e7eb;
   }
+
+  .information {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .information h1{
+    font-size: 36px;
+    color: #1f2937;
+    font-weight: 900;
+  }
+
+  .images {
+    display: flex;
+    padding: 16px 180px;
+    text-align: center;
+  }
+
+  .quote {
+    background-color: #e5e7eb;
+    padding: 64px 250px; 
+  }
+
+  .quote h1 {
+    font-size: 36px;
+    color: #1f2937;
+    font-style:italic;
+  }
+
+  .quote p{
+    text-align: end;
+    font-weight: 400;
+    color: #1f2937;
+    font-size: 20px;
+  }
